<resources>
    <string name="app_name">Workout App</string>
    <string name="title_activity_list_exercises">Choose Exercise</string>
    <string name="action_settings">Settings</string>
    <string name="main_activity_title">Records</string>
    <string name="preferences_activity_title">Preferences</string>
    <string name="music1">Linkin Park - In The End</string>
    <string name="music2">Linkin Park - Numb</string>
    <string name="music3">Linkin Park - What I´ve done</string>
    <string name="nomusic">no music</string>
    <string name="pushupdescription">A push-up is a common calisthenics exercise beginning from the prone position. By raising and lowering the body using the arms, push-ups exercise the pectoral muscles, triceps, and anterior deltoids, with ancillary benefits to the rest of the deltoids, serratus anterior, coracobrachialis and the midsection as a whole.</string>
    <string name="squatdescription">A squat is a strength exercise in which the trainee lowers their hips from a standing position and then stands back up. During the descent of a squat, the hip and knee joints flex while the ankle joint dorsiflexes; conversely the hip and knee joints extend and the ankle joint plantarflexes when standing up.</string>
    <string name="jumpingjackdescription">A jumping jack, also known as a star jump and called a side-straddle hop in the US military, is a physical jumping exercise performed by jumping to a position with the legs spread wide and the hands going overhead, sometimes in a clap, and then returning to a position with the feet together and the arms at the sides.</string>
    <string name="plankdescription">The plank (also called a front hold, hover, or abdominal bridge) is an isometric core strength exercise that involves maintaining a position similar to a push-up for the maximum possible time. The plank is an excellent abdominal and core exercise. It works not only the rectus abdominis, but also the other ab muscles and the core muscles that run from the pelvis along the spine and up to the shoulder girdle</string>
    <string name="cardio_program_description">Cardio program: Jumping Jacks and Squats.</string>
    <string name="abdomen_torso_program_description">Abs program: Push-ups and Plank.</string>

    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="tfe_pn_request_permission" translation_description="Request camera permission [CHAR_LIMIT=40]">This app needs camera permission.</string>
    <string name="tfe_pn_camera_error" translation_description="Error regarding camera support[CHAR_LIMIT=40]">This device doesn\'t support Camera2 API.</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="calculateBMI">calculate BMI</string>
    <string name="very_severely_underweight">Very severely underweight</string>
    <string name="severely_underweight">Severely underweight</string>
    <string name="underweight">Underweight</string>
    <string name="normal">Normal weight</string>
    <string name="overweight">Overweight</string>
    <string name="obese_class_i">Obese Class I (Moderately obese)</string>
    <string name="obese_class_ii">Obese Class II (Severely obese)</string>
    <string name="obese_class_iii">Obese Class III (Very severely obese)</string>
    <string name="save">Save</string>
    <string name="clear">clear</string>
    <string name="get">get</string>
</resources>